--- a/app/src/main/res/layout/activity_shop_details.xml
+++ b/app/src/main/res/layout/activity_shop_details.xml
@@ -84,6 +84,11 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -100,13 +105,7 @@
                />
 
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardElevation="5dp"
-                app:cardUseCompatPadding="true">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -120,12 +119,14 @@
                     android:id="@+id/shopdesc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="10dp"
                     android:lineSpacingMultiplier="1.5"
-                    android:padding="12dp"
                     android:textColor="@color/black"
                     android:textSize="14sp"
+                    android:layout_marginBottom="5dp"
                     />
+                </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
