--- a/app/src/main/res/layout/activity_check_number_.xml
+++ b/app/src/main/res/layout/activity_check_number_.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".CheckNumber_Activity">
 
-    <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="213dp"
         android:layout_gravity="center_vertical"
@@ -67,7 +67,46 @@
             android:text="@string/send_code"
             android:textColor="@color/white"
             android:textSize="18sp" />
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="@string/please_enter_the_code"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <EditText
+            android:id="@+id/code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="phone"
+            android:maxLength="9" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/enter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/button_background"
+        android:text="@string/enter"
+        android:textColor="@color/white"
+        android:textSize="18sp" />
 
 </LinearLayout>
